<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string><!--Google AdMod Test ID-->

    <string name="app_name">Arithmetic Game</string>
    <string name="main_title">Arithmetic \nGame</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_new_game">New Game</string>
    <string name="action_help">Help</string>
    <string name="zen">Zen</string>
    <string name="journey">Journey</string>
    <string name="adventure">Adventure</string>
    <string name="highscore">High Score</string>
    <string name="unknown_value">\?\?\?</string>
    <string name="unknown_operator">\?</string>
    <string name="main_rule">Drag across the number grid in a straight line vertically, horizontally or diagonally to select number.
        \n\n
        When a valid number is selected, it is placed on the right at the red position.
        After the next valid operand is selected, the number at the red position shifts to the green position.
        And the number at the green position shifts to the blue position.
        The newly selected number then takes the red position.
        \n\n
        When the three numbers form a correct arithmetic(+-\u00D7\u00F7) expression, you score.
        When you continuously form correct arithmetic expressions, you gain chain multiplier.
        \n\n
        Valid numbers cannot have leading zeros and cannot intersect each other.
        \n\n
        For addition and subtraction, score=(blue)+(green)+(red).
        For multiplication and division, score=((blue)+(green)+(red))x(log10(blue)+1) x (log10(green)+1) x (log10(red)+1).
        The score is then multiplied by the current chain number.
    </string>
    <string name="title_activity_zen">Arithmetic Zen</string>
    <string name="zen_help">Drag across the number grid in a straight line vertically, horizontally or diagonally to select number.
        \n\n
        When a valid number is selected, it is placed on the right at the red position.
        After the next valid operand is selected, the number at the red position shifts to the green position.
        And the number at the green position shifts to the blue position.
        The newly selected number then takes the red position.
        \n\n
        When the three numbers form a correct arithmetic(+-\u00D7\u00F7) expression, you score.
        When you continuously form correct arithmetic expressions, you gain chain multiplier.
        \n\n
        Valid numbers cannot have leading zeros and cannot intersect each other.
        In Zen mode, all three numbers must be greater or equal to 10.
        And each set of numbers must be unique.</string>
    <string name="zen_rule">In Zen mode, all three numbers must be greater or equal to 10.
        And each set of numbers must be unique.</string>
    <string name="title_activity_journey">Arithmetic Journey</string>
    <string name="journey_help">Drag across the number grid in a straight line vertically, horizontally or diagonally to select number.
        \n\n
        When a valid number is selected, it is placed on the right at the red position.
        After the next valid operand is selected, the number at the red position shifts to the green position.
        And the number at the green position shifts to the blue position.
        The newly selected number then takes the red position.
        \n\n
        When the three numbers form a correct arithmetic(+-\u00D7\u00F7) expression, you score.
        When you continuously form correct arithmetic expressions, you gain chain multiplier.
        \n\n
        Valid numbers cannot have leading zeros and cannot intersect each other.
        In Journey mode, multiplication by zero is not allowed.
        For each valid number selected, one move is deducted. When you runs out of moves, you lose.
        After each correct expression, the selected digits are randomly replaced. Duplicate expressions are allowed in this mode.
        \n\n
        For addition and subtraction, moves = log10(blue)+log10(green)+log10(red).
        For multiplication and division, moves =(log10(blue)+1) x (log10(green)+1) x (log10(red)+1).
        The number of moves is then multiplied by the current chain number.</string>
    <string name="journey_rule">In Journey mode, multiplication by zero is not allowed.</string>
    <string name="score_system">        For addition and subtraction, score=(blue)+(green)+(red).
        For multiplication and division, score=((blue)+(green)+(red))x(log10(blue)+1) x (log10(green)+1) x (log10(red)+1).
        The score is then multiplied by the current chain number.</string>
    <string name="chain">Chain</string>
    <string name="title_activity_adventure">Arithmetic Adventure</string>
    <string name="adventure_help">Drag across the number grid in a straight line vertically, horizontally or diagonally to select number.
        \n\n
        When a valid number is selected, it is placed on the right at the red position.
        After the next valid operand is selected, the number at the red position shifts to the green position.
        And the number at the green position shifts to the blue position.
        The newly selected number then takes the red position.
        \n\n
        When the three numbers form a correct arithmetic(+-\u00D7\u00F7) expression, you score.
        When you continuously form correct arithmetic expressions, you gain chain multiplier.
        \n\n
        Valid numbers cannot have leading zeros and cannot intersect each other.
        In Adventure mode, multiplication by zero is not allowed.
        After each correct expression, the selected digits are randomly replaced. Duplicate expressions are allowed in this mode.
        When you runs out of time, you lose.
        \n\n
        For addition and subtraction, time = log10(blue)+log10(green)+log10(red).
        For multiplication and division, time =(log10(blue)+1) x (log10(green)+1) x (log10(red)+1).
        The number of moves is then multiplied by the current chain number.</string>
    <string name="adventure_rule">In Adventure mode, multiplication by zero is not allowed.
        After each correct expression, the selected digits are randomly replaced. Duplicate expressions are allowed in this mode.
        When you runs out of time, you lose.</string>
    <string name="title_activity_chain">Arithmetic Chain</string>
    <string name="chain_help">Drag across the number grid in a straight line vertically, horizontally or diagonally to select number.
        \n\n
        When a valid number is selected, it is placed on the right at the red position.
        After the next valid operand is selected, the number at the red position shifts to the green position.
        And the number at the green position shifts to the blue position.
        The newly selected number then takes the red position.
        \n\n
        When the three numbers form a correct arithmetic(+-\u00D7\u00F7) expression, you score.
        When you continuously form correct arithmetic expressions, you gain chain multiplier.
        \n\n
        Valid numbers cannot have leading zeros and cannot intersect each other.
        In Chain mode, multiplication by zero is not allowed.
        You lose when the arithmetic chain is broken.</string>
    <string name="chain_rule">In Chain mode, multiplication by zero is not allowed.</string>
    <string name="title_activity_high_score">Arithmetic High Score</string>
    <string name="hello_world">Hello world!</string>

</resources>
