<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_new_game" android:title="@string/action_new_game"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_rules" android:title="\?"
        android:orderInCategory="100" app:showAsAction="always" />
</menu>
