<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--todo need to add background -->



    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans serif"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            android:width="@dimen/menu_button_width"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/menu_button_margin_top"
            android:layout_marginBottom="@dimen/menu_button_margin_top"
            android:onClick="onChainStart"
            android:text="@string/chain"
            android:textColor="@color/num_color0"
            android:id="@+id/chain_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans serif"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            android:width="@dimen/menu_button_width"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/menu_button_margin_top"
            android:layout_marginBottom="@dimen/menu_button_margin_top"
            android:onClick="onAdventureStart"
            android:text="@string/adventure"
            android:textColor="@color/num_color1"
            android:id="@+id/adventure_button" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans serif"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            android:width="@dimen/menu_button_width"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/menu_button_margin_top"
            android:layout_marginBottom="@dimen/menu_button_margin_top"
            android:onClick="onJourneyStart"
            android:text="@string/journey"
            android:textColor="@color/num_color2"
            android:id="@+id/journey_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans serif"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            android:width="@dimen/menu_button_width"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/menu_button_margin_top"
            android:layout_marginBottom="@dimen/menu_button_margin_top"
            android:onClick="onZenStart"
            android:text="@string/zen"
            android:textColor="@color/num_color3"
            android:id="@+id/zen_button" />




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans serif"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            android:width="@dimen/menu_button_width"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/menu_button_margin_top"
            android:layout_marginBottom="@dimen/menu_button_margin_top"
            android:onClick="onHighScoreStart"
            android:text="@string/highscore"
            android:textColor="@color/num_color5"
            android:id="@+id/highscore_button" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/background_text_size"
        android:text="0"
        android:textColor="@color/num_color0"
        android:id="@+id/textView0" />
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="1"-->
        <!--android:textColor="@color/num_color1"-->
        <!--android:id="@+id/textView1" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="2"-->
        <!--android:textColor="@color/num_color2"-->
        <!--android:id="@+id/textView2" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="3"-->
        <!--android:textColor="@color/num_color3"-->
        <!--android:id="@+id/textView3" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="4"-->
        <!--android:textColor="@color/num_color4"-->
        <!--android:id="@+id/textView4" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="5"-->
        <!--android:textColor="@color/num_color5"-->
        <!--android:id="@+id/textView5" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="6"-->
        <!--android:textColor="@color/num_color6"-->
        <!--android:id="@+id/textView6" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="7"-->
        <!--android:textColor="@color/num_color7"-->
        <!--android:id="@+id/textView7" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="8"-->
        <!--android:textColor="@color/num_color8"-->
        <!--android:id="@+id/textView8" />-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/background_text_size"-->
        <!--android:text="9"-->
        <!--android:textColor="@color/num_color9"-->
        <!--android:id="@+id/textView9" />-->
</FrameLayout>